Fix color picker vertical align

--- a/contribs/gmf/less/search.less
+++ b/contribs/gmf/less/search.less
@@ -6,6 +6,7 @@
 
   & > * {
     display: inline-block;
+    vertical-align: top;
   }
 
   .gmf-search {
